Create modal markup

--- a/index.html
+++ b/index.html
@@ -452,5 +452,29 @@
         </div>
       </div>
     </footer>
+    <div class="modal-form">
+      <modal>
+        <p>Leave your contacts and we will call you back</p>
+
+        <form>
+          <label class="modal">
+            Name
+            <input type="text" />
+          </label>
+          <label class="modal">
+            Phone
+            <input type="text" />
+          </label>
+          <label class="modal">
+            Email
+            <input type="text" />
+          </label>
+          <label class="modal">
+            Comment
+            <textarea type="text" />
+          </label>
+        </form>
+      </modal>
+    </div>
   </body>
 </html>
