Create subscribe box in footer

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           </p>
         </div>
         <div class="footer-socials-media">
-          <p class="footer-socials-title">Social media</p>
+          <p class="footer-title">Social media</p>
           <ul class="footer-socials">
             <li class="footer-socials-item">
               <a class="link" href="#" target="_blank">
@@ -449,6 +449,18 @@
               ></a>
             </li>
           </ul>
+        </div>
+        <div class="subscribe-box">
+          <p class="footer-title">Subscribe</p>
+          <div class="test">
+            <input type="email" name="email-address" placeholder="E-mail" />
+            <button class="subscribe-btn" type="button" name="subscribe-btn">
+              Subscribe
+              <svg class="btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
