--- a/index.html
+++ b/index.html
@@ -451,16 +451,21 @@
           </ul>
         </div>
         <div class="subscribe-box">
-          <p class="footer-title">Subscribe</p>
-          <div class="test">
-            <input type="email" name="email-address" placeholder="E-mail" />
+          <p class="subscribe-title">Subscribe</p>
+          <form class="subscribe-form">
+            <input
+              class="subscribe-input"
+              type="email"
+              name="email-address"
+              placeholder="E-mail"
+            />
             <button class="subscribe-btn" type="button" name="subscribe-btn">
               Subscribe
-              <svg class="btn-icon" width="24" height="24">
+              <svg class="subscribe-btn-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-plane"></use>
               </svg>
             </button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
