--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           </ul>
         </div>
         <div class="subscribe-box">
-          <p class="subscribe-title">Subscribe</p>
+          <p class="footer-title">Subscribe</p>
           <form class="subscribe-form">
             <input
               class="subscribe-input"
