--- a/index.html
+++ b/index.html
@@ -490,23 +490,14 @@
             <label for="user-mail">Email</label>
             <input id="user-mail" type="text" name="user-mail" />
           </div>
-          <div>
-            <label for="comment">Comment</label>
-            <textarea
-              class="form-textarea"
-              id="comment"
-              type="text"
-              name="user-comment"
-              placeholder="Text input"
-            />
-          </div>
 
-          <div>
-            <input id="checkbox" type="checkbox" />
-            <label for="checkbox"
-              >I accept the terms and conditions of the Privacy Policy</label
-            >
-          </div>
+          <label for="Textarea">Comment</label>
+          <textarea id="Textarea" name="Textarea" placeholder="Text input"></textarea>
+
+          <input id="checkbox" type="checkbox" />
+          <label for="checkbox"
+            >I accept the terms and conditions of the Privacy Policy</label
+          >
 
           <button type="submit">Send</button>
         </form>
@@ -514,3 +505,14 @@
     </div>
   </body>
 </html>
+<!-
+<div>
+            <label for="user-comment">Comment</label>
+            <textarea
+              class="form-textarea"
+              id="user-comment"
+              type="text"
+              name="user-comment"
+              placeholder="Text input"
+            />
+          </div> -->
