--- a/index.html
+++ b/index.html
@@ -455,9 +455,7 @@
         <div class="subscribe-box">
           <p class="footer-title">Subscribe</p>
           <form class="subscribe-form">
-            <label for="user-email" class="visually-hidden" name="subscribe"
-              >Subscribe</label
-            >
+            <label for="user-email" class="visually-hidden">Subscribe</label>
             <input
               class="subscribe-input"
               type="email"
@@ -540,19 +538,21 @@
           </div>
 
           <div class="modal-checkbox-wrap">
-            <!-- <svg class="checkbox-icon" width="16" height="16">
-              <use href="./images/icons.svg#icon-checkbox"></use>
-            </svg> -->
             <input
               class="modal-checkbox-input visually-hidden"
               id="checkbox"
               type="checkbox"
               name="checkbox"
             />
+            <span class="modal-checkbox-check">
+              <svg class="modal-checkbox-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-checkbox"></use>
+              </svg>
+            </span>
             <label class="modal-checkbox-label" for="checkbox"
               >I accept the terms and conditions of the
-              <a class="privacy-policy" href="#">Privacy Policy</a></label
-            >
+              <a class="privacy-policy" href="#">Privacy Policy</a>
+            </label>
           </div>
 
           <button class="button" type="submit">Send</button>
