Update footer code

--- a/index.html
+++ b/index.html
@@ -455,14 +455,15 @@
         <div class="subscribe-box">
           <p class="footer-title">Subscribe</p>
           <form class="subscribe-form">
-            <label for="user-email" class="visually-hidden">Subscribe</label>
-            <input
-              class="subscribe-input"
-              id="user-email"
-              type="email"
-              name="user-email"
-              placeholder="E-mail"
-            />
+            <label class="visually-hidden"
+              >Subscribe
+              <input
+                class="subscribe-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="subscribe-btn" type="submit" name="subscribe-btn">
               Subscribe
               <svg class="subscribe-btn-icon" width="24" height="24">
@@ -544,6 +545,7 @@
               id="user-privacy"
               type="checkbox"
               name="user-privacy"
+              value="true"
             />
 
             <label class="modal-checkbox-label" for="user-privacy">
