Change styles & icon
1. delete modal box class "is-open"
2. delete subsribe label value
3. change checkbox icon
4. delete extra styles

--- a/index.html
+++ b/index.html
@@ -455,8 +455,7 @@
         <div class="subscribe-box">
           <p class="footer-title">Subscribe</p>
           <form class="subscribe-form">
-            <label class="visually-hidden"
-              >Subscribe
+            <label class="subscribe-label">
               <input
                 class="subscribe-input"
                 type="email"
@@ -475,7 +474,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="close-icon" width="8" height="8">
